--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "cdt-training",
-<<<<<<< HEAD
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -11,36 +10,15 @@
   "dependencies": {
     "@clerk/nextjs": "^6.31.9",
     "lucide-react": "^0.542.0",
-    "next": "13.4.19",
+    "next": "13.5.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "@types/node": "^24.3.1",
-    "@types/react": "^19.1.12",
-    "typescript": "^5.9.2"
-=======
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "lucide-react": "^0.542.0",
-    "next": "15.5.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.2",
-    "tailwindcss": "^4"
->>>>>>> 8d8968efb8d492b08d46b2a11ea09a11bd49f7ca
+    "@types/node": "^18.17.19",
+    "@types/react": "^18.2.14",
+    "autoprefixer": "^10.4.21",
+    "typescript": "^5.1.6"
   }
 }
