--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.31.9",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "lucide-react": "^0.542.0",
     "next": "13.5.7",
