--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+    "@/*": ["app/*"]
     },
     "plugins": [{ "name": "next" }]
   },
